--- a/src/pug/project-questions.pug
+++ b/src/pug/project-questions.pug
@@ -17,7 +17,10 @@ block content
           //- ._inner
           .project-questions
             .__sidebar
-              p.__sidebar-title Разработка интернет-магазина
+              .__sidebar-head
+                p.__sidebar-title Разработка интернет-магазина
+                a.__sidebar-close.js-sidebar-hide(href="#")
+                  span
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужен ли вам маркетинг?
                 .__sidebar-item
@@ -42,8 +45,9 @@ block content
                 a.js-open-parent(href="#") Нужны ли вам услуги программирования?
             .__content
               .__progress
-                .__point(style="padding-left: 24%") 24%
-                  span
+                .__point(style="padding-left: 24%")
+                  span.dot
+                    span.info 24%
                 .__line
               .__item
                 p.__title Требуется ли вам интернет-маркетинг?
