--- a/src/pug/form-questions.pug
+++ b/src/pug/form-questions.pug
@@ -15,7 +15,7 @@ block content
       .main-content.js-main-content-scroller
         ._container.container
           .project-questions
-            .__sidebar
+            .__sidebar.project-questions__sidebar--form
               .__sidebar-toggle
                 .__sidebar-input
                   .ui-group.-inline
@@ -32,84 +32,117 @@ block content
                       label.ui-toggle._ui-toggle
                         input._input(type='checkbox' name='test_2')#test_2
                         span._handle
-              p.__sidebar-title Разработка интернет-магазина
+              //- p.__sidebar-title Разработка интернет-магазина
+              .__sidebar-head
+                p.__sidebar-title Разработка интернет-магазина
+                  span.project-questions__sidebar-add
+                    +svgMono("plus")
+                a.__sidebar-close.js-sidebar-hide(href="#")
+                  span
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужен ли вам маркетинг?
+                  span.project-questions__sidebar-add
+                    +svgMono("plus")
+                .__sidebar-tasks
+                  | 3 задачи
+                  .__sidebar-tasks-links
+                    a.__sidebar-tasks-link(href="#") Подготовить коммерческое предложение для подключения платежного шлюза 1
+                    a.__sidebar-tasks-link(href="#") Подготовить коммерческое предложение для подключения платежного шлюза 2
                 .__sidebar-item
                   a.js-open-parent(href="#") Укажите общий бюджет на маркетинг
+                    span.project-questions__sidebar-add
+                      +svgMono("plus")
                   .__sidebar-item
                     a.js-open-parent(href="#") Требуется ли вам offline-маркетинг?
+                      span.project-questions__sidebar-add
+                        +svgMono("plus")
                     .__sidebar-item.last
                       a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
+                        span.project-questions__sidebar-add
+                          +svgMono("plus")
                   .__sidebar-item
                     a.js-open-parent(href="#") Требуется ли вам интернет-маркетинг?
+                      span.project-questions__sidebar-add
+                        +svgMono("plus")
                     .__sidebar-item.last
                       a.js-open-parent(href="#") Нужны ли вам работы над сайтом?
+                        span.project-questions__sidebar-add
+                          +svgMono("plus")
                     .__sidebar-item.last.error
                       a.js-open-parent(href="#") Нужна ли работа с целевой аудиторией и мониторинг работы компании?
+                        span.project-questions__sidebar-add
+                          +svgMono("plus")
                         //- span.error(data-att="Добавьте ответ к этой связи")
-                        span.error
-                        span.hint Добавьте ответ к этой связи
+                        span.error.js-tooltip(data-tippy-placement="top" data-tippy-content="Добавьте ответ к этой связи" title='' href="#")
+                        //- span.hint Добавьте ответ к этой связи
                   .__sidebar-item.last
                     a.js-open-parent(href="#") Требуется ли вам комплексный маркетинг?
+                      span.project-questions__sidebar-add
+                        +svgMono("plus")
                 .__sidebar-item
                   a.js-open-parent(href="#") Укажите желаемое время реализации
+                    span.project-questions__sidebar-add
+                      +svgMono("plus")
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужны ли вам услуги дизайна?
+                  span.project-questions__sidebar-add
+                    +svgMono("plus")
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужны ли вам услуги программирования?
+                  span.project-questions__sidebar-add
+                    +svgMono("plus")
             .form-questions__content
               .form-questions__head
                 .form-questions__head-left
                   p.form-questions__title Требуется ли вам интернет-маркетинг?
                   p.form-questions__description Введите описание, если это необходимо
                 .form-questions__head-right
-                  a.form-questions__remove(href="#")
+                  a.form-questions__remove.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" title='Удалить' href="#")
                     +svgMono('remove')
-                    span Удалить связь
               .form-questions__role
-                p Выберите роль:
-                .form-questions__role-select
-                  select.ui-input.js-select
-                    option Дизайнер
-                    option(value='0') Роль 1
-                    option(value='1') Роль 1
-                    option(value='2') Роль 1
-                    option(value='3') Роль 1
-                    option(value='4') Роль 1
-                .ui-group.-inline
-                  p Несколько ответов:
-                  ._content
-                    label.ui-toggle._ui-toggle
-                      input._input(type='checkbox' name='test_11' checked)
-                      span._handle
-                .form-questions__role-right
+                .form-questions__role-item
+                  p Выберите роль:
+                  .form-questions__role-select
+                    select.js-select-chosen
+                      option Дизайнер
+                      option(value='0') Роль 1
+                      option(value='1') Роль 1
+                      option(value='2') Роль 1
+                      option(value='3') Роль 1
+                      option(value='4') Роль 1
+                .form-questions__role-item
+                  .ui-group.-inline
+                    p Несколько ответов:
+                    ._content
+                      label.ui-toggle._ui-toggle
+                        input._input(type='checkbox' name='test_11' checked)
+                        span._handle
+
+                .form-questions__role-item
                   .ui-group.-inline
                     p Несколько ответов:
                     ._content
                       label.ui-toggle._ui-toggle
                         input._input(type='checkbox' name='test_12')
                         span._handle
-              .form-questions__items#sortable
+              .form-questions__items.js-sortable
                 .form-questions__item
                   .form-questions__item-head
                     p.form-questions__answer ответ 1
                     .form-questions__row
-                      .form-questions__item-title
+                      .form-questions__row-left
                         .handle
                           +svgMono('lines')
-                        | Требуется
+                        .form-questions__row-title.js-editable-caption(contenteditable="true" placeholder="Требуется") Требуется
                       .form-questions__head-right
-                        a.form-questions__remove(href="#")
+                        a.form-questions__remove.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" title='Удалить' href="#")
                           +svgMono('remove')
-                          span Удалить связь
                   .form-questions__item-body
                     .form-questions__item-body-row
                       p.form-questions__item-body-title Задача 1
                       .form-questions__head-right
-                        a.form-questions__remove(href="#")
+                        a.form-questions__remove.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" title='Удалить' href="#")
                           +svgMono('remove')
-                          span Удалить связь
                     .form-questions__item-body-grid
                       .form-questions__item-body-left
                         input.ui-input(type='text' name='login' placeholder="Название задачи")
@@ -127,9 +160,8 @@ block content
                     .form-questions__item-body-row
                       p.form-questions__item-body-title Связь 1
                       .form-questions__head-right
-                        a.form-questions__remove(href="#")
+                        a.form-questions__remove.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" title='Удалить' href="#")
                           +svgMono('remove')
-                          span Удалить связь
                     .form-questions__item-body-grid
                       input.ui-input(type='text' name='login' placeholder="Название задачи" value="Нужны ли вам работы над сайтом?")
                       a.btn.btn-outline(href="#") Перейти к связи
@@ -137,9 +169,8 @@ block content
                     .form-questions__item-body-row
                       p.form-questions__item-body-title Связь 1
                       .form-questions__head-right
-                        a.form-questions__remove(href="#")
+                        a.form-questions__remove.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" title='Удалить' href="#")
                           +svgMono('remove')
-                          span Удалить связь
                     .form-questions__item-body-grid
                       input.ui-input(type='text' name='login' placeholder="Название задачи" value="Нужны ли вам работы над сайтом?")
                       a.btn.btn-outline(href="#") Перейти к связи
@@ -156,14 +187,13 @@ block content
                   .form-questions__item-head
                     p.form-questions__answer ответ 2
                     .form-questions__row
-                      .form-questions__item-title
+                      .form-questions__row-left
                         .handle
                           +svgMono('lines')
-                        | Не требуется
+                        .form-questions__row-title.js-editable-caption(contenteditable="true" placeholder="Требуется")   Не требуется
                       .form-questions__head-right
-                        a.form-questions__remove(href="#")
+                        a.form-questions__remove.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" title='Удалить' href="#")
                           +svgMono('remove')
-                          span Удалить связь
                   .form-questions__item-bottom
                     a(href="#")
                       +svgMono('add-task')
@@ -175,14 +205,13 @@ block content
                   .form-questions__item-head
                     p.form-questions__answer ответ 3
                     .form-questions__row
-                      .form-questions__item-title
+                      .form-questions__row-left
                         .handle
                           +svgMono('lines')
-                        | Введите ответ
+                        .form-questions__row-title.js-editable-caption(contenteditable="true" placeholder="Требуется") Введите ответ
                       .form-questions__head-right
-                        a.form-questions__remove(href="#")
+                        a.form-questions__remove.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" title='Удалить' href="#")
                           +svgMono('remove')
-                          span Удалить связь
                   .form-questions__item-bottom
                     a(href="#")
                       +svgMono('add-task')
