--- a/src/pug/project-access.pug
+++ b/src/pug/project-access.pug
@@ -5,6 +5,7 @@ auth: false
 extends shared/_layout
 include ../components/mainHeader/_mainHeader
 include ../components/mainFooter/_mainFooter
+include ../components/tile/_tile
 
 block content
 
@@ -19,22 +20,42 @@ block content
             .content-grid._grid
               ._inner
                 ._column
-                  .tile._tile
-                    button.btn-delete._btn-delete(type='button' title='Удалить')
-                      +svgMono('delete')
-                    h3._heading Андрей Логвинов
-                    ._select
-                      span Доступ:
-                      span._selected Редактирование
+                  .tile.--access
+                    button.btn-delete.tile__btn-delete.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" type="button" title="Удалить")
+                      +svgMono("delete")
+
+                    h3.tile__heading.js-editable-caption(contenteditable="true" placeholder="Введите имя сотрудника") Андрей Логвинов
+                    .tile__select-row
+                      p Доступ:
+                      select.js-select-chosen
+                        option(value='Редактирование') Редактирование
+                        option(value='Чтение' selected) Чтение
+                        option(value='Все') Все
 
                 ._column
-                  .tile._tile
-                    button.btn-delete._btn-delete(type='button' title='Удалить')
-                      +svgMono('delete')
-                    h3._heading Константин Константинопольский
-                    ._select
-                      span Доступ:
-                      span._selected Чтение
+                  .tile.--access
+                    button.btn-delete.tile__btn-delete.js-tooltip(data-tippy-placement="top" data-tippy-content="Удалить" type="button" title="Удалить")
+                      +svgMono("delete")
+                    h3.tile__heading.js-editable-caption(contenteditable="true" placeholder="Введите имя сотрудника") Константин Константинопольский
+
+                    .tile__select-row
+                      p Доступ:
+                      select.js-select-chosen
+                        option(value='Редактирование' selected) Редактирование
+                        option(value='Чтение') Чтение
+                        option(value='Все') Все
+
+                //- ._column
+                //-   +tileCard({
+                //-     heading: 'Андрей Логвинов',
+                //-     access: 'Редактирование'
+                //-   })
+
+                //- ._column
+                //-   +tileCard({
+                //-     heading: 'Константин Константинопольский',
+                //-     access: 'Чтение'
+                //-   })
 
                 ._column
                   .tile.-add._tile Добавить нового пользователя
