--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -25,6 +25,7 @@ body, html
   margin: 0
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+  overflow: hidden
 
 ::selection
   color: white
@@ -129,17 +130,20 @@ body, html
 
 
 .content-grid
+  margin-bottom: 50px
   &__inner
     display: flex
     flex-wrap: wrap
     margin: 0 -13px -25px
 
   &__column
-    flex: 1 1 20%
-    max-width: 20%
+    width: 100%
+    flex: 0 0 264px
+    max-width: 264px
     margin-bottom: 25px
     padding-left: 13px
     padding-right: 13px
+    // position: relative
 
 
 .content-comments
@@ -163,68 +167,6 @@ body, html
     margin-top: 10px
     text-align: right
 
-.tile
-  display: flex
-  flex-direction: column
-  position: relative
-  padding: 25px 20px 24px
-  height: 100%
-  border: 1px solid $borderColor
-  border-radius: 4px
-
-  &:hover
-    background-color: $colorBg
-    border-color: $colorBg
-
-    .tile__btn-delete
-      display: block
-
-  &--add
-    display: flex
-    flex-direction: column
-    align-items: center
-    justify-content: center
-    padding: 15px
-    min-height: 100px
-    color: $colorPrimary
-    text-align: center
-    border-color: $colorPrimary
-    cursor: pointer
-
-    &::before
-      content: '+'
-      margin-bottom: 7px
-      display: block
-      width: 30px
-      height: 30px
-      color: white
-      font-size: 20px
-      font-weight: 700
-      line-height: 32px
-      background-color: $colorPrimary
-      border-radius: 50%
-
-  &__btn-delete
-    position: absolute
-    top: 10px
-    right: 12px
-    display: none
-
-  &__heading
-    margin: 0 0 9px
-
-  &__caption
-    margin: auto 0 0
-
-  &__select
-    margin-top: auto
-
-  &__label
-    margin-right: 7px
-
-  &__selected
-    color: $colorLight
-    cursor: pointer
 
 // REMOVE FOR PRODUCTION !
 .dev-bp-debug
@@ -237,3 +179,14 @@ body, html
   padding: 5px
   font-size: 12px
   border-bottom-left-radius: 5px
+
+.js-transition-overlay
+  position: fixed
+  top: 100%
+  left: 0
+  right: 0
+  height: 100vh
+  z-index: 7
+  background: $colorPrimary
+  will-change: transform
+  backface-visibility: hidden
